package org.example.User;

public interface UserInterface {
    String getName();
    int getAge();
    String getRole();
} 